feat(log module): update log module and add null mark check